estructura ma o me pensada

--- a/index.html
+++ b/index.html
@@ -20,19 +20,29 @@
         <h2>Bauti Bustos</h2>
         <h1>Backend Developer</h1>
     </section>
-    <section class="descripcion">
-        <img src="img/monky.png"><h3 class="oxygen-regular">Hola! esta son mis primeras incursiones en HTML junto a CSS y como Frontend. Mi real interes y facilidad esta dentro del desarollo Backend.</h3>
+    <!--
+    https://getbootstrap.com/docs/5.3/layout/breakpoints/
+    flex-column: pone todo en columna (x boostrap)
+    flex-md-row: agrega un limite para transformarse en filas
+          L md = 	≥768px (dimenciones)
+    -->
+    <section class="descripcion flex-column flex-md-row">
+        <img src="img/monky.png"><h3 class="oxygen-regular text-center text-md-start">Hola! esta son mis primeras incursiones en HTML junto a CSS y como Frontend. Mi real interes y facilidad esta dentro del desarollo Backend.</h3>
     </section>
+
     <section class="xp">
+        <h1 class="oxygen-bold">- proyectos(cards)</h1>
         <h2 class="title oxygen-bold">Experiencia</h2>
         <article class="izq">
-            <h2 class="oxygen-bold">Desarrollo de Sistema de Inventario</h2>
-            <h3>Ministerio de Agricultura y Ganaderia</h3>
+            <h3 class="oxygen-regular">Ministerio de Agricultura y Ganaderia</h3>
+            <p>fecha</p>
         </article>
         <article class="izq">
-            <h2 class="oxygen-bold">Desarrollo de envio de Whatsapp Masivos</h2>
-            <h3>Ministerio de Bioagroindustria</h3>
+            <h3 class="oxygen-regular">Ministerio de Bioagroindustria</h3>
+            <p>fecha</p>
         </article>
+        <h1 class="oxygen-bold">- tecnologias</h1>
+        <h1 class="oxygen-bold">- contacto</h1>
     </section>
 
 </body>
