feat: se añadieron las cards queda pendiente terminar de revisar los estilos en cuanto a colores

--- a/index.html
+++ b/index.html
@@ -27,11 +27,40 @@
           L md = 	≥768px (dimenciones)
     -->
     <section class="descripcion flex-column flex-md-row">
-        <img src="img/monky.png"><h3 class="oxygen-regular text-center text-md-start">Hola! esta son mis primeras incursiones en HTML junto a CSS y como Frontend. Mi real interes y facilidad esta dentro del desarollo Backend.</h3>
+        <img src="img/monky.png" alt="imagen de perfil"><h3 class="oxygen-regular text-center text-md-start">Hola! esta son mis primeras incursiones en HTML junto a CSS y como Frontend. Mi real interes y facilidad esta dentro del desarollo Backend.</h3>
     </section>
 
+    <!-- seccion de proyectos -->
+    <section class="proyectos">
+        <h2 class="title oxygen-bold">Proyectos</h2>
+        <div class="row">
+            <!--
+                col-md-6: Define el comportamiento para pantallas medianas y más grandes
+                mb-4: Agrega un margen inferior para separar las tarjetas cuando se apilan.
+            -->
+            <div class="col-md-6 mb-4">
+                <article class="card tarjeta">
+                    <h3 class="oxygen-bold">Bot Discord</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores dolor ex doloremque totam veniam quos temporibus laborum suscipit molestiae aliquid </p>
+                </article>
+            </div>
+            <div class="col-md-6 mb-4">
+                <article class="card tarjeta">
+                    <h3 class="oxygen-bold">Bot Discord</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores dolor ex doloremque totam veniam quos temporibus laborum suscipit molestiae aliquid </p>
+                </article>
+            </div>
+            <div class="col-md-6 mb-4">
+                <article class="card tarjeta">
+                    <h3 class="oxygen-bold">Bot Discord</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores dolor ex doloremque totam veniam quos temporibus laborum suscipit molestiae aliquid </p>
+                </article>
+            </div>
+        </div>
+    </section>
+
+    <!-- seccion de experiencia -->
     <section class="xp">
-        <h1 class="oxygen-bold">- proyectos(cards)</h1>
         <h2 class="title oxygen-bold">Experiencia</h2>
         <article class="izq">
             <h3 class="oxygen-regular">Ministerio de Agricultura y Ganaderia</h3>
