feat: cards de los lenguajes y se añadio sofware

--- a/index.html
+++ b/index.html
@@ -64,15 +64,38 @@
         <h2 class="title oxygen-bold">Experiencia</h2>
         <article class="izq">
             <h3 class="oxygen-regular">Ministerio de Agricultura y Ganaderia</h3>
-            <p>fecha</p>
+            <p>Septiembre 2022 - Agosto 2024</p>
         </article>
         <article class="izq">
             <h3 class="oxygen-regular">Ministerio de Bioagroindustria</h3>
-            <p>fecha</p>
+            <p>Agosto 2024 - Actualidad</p>
         </article>
-        <h1 class="oxygen-bold">- tecnologias</h1>
-        <h1 class="oxygen-bold">- contacto</h1>
     </section>
-
+    <section class="Tec">
+        <h2 class="oxygen-bold">Tecnología</h2>
+        <section class="sub-tecno">
+         <h3 class="oxygen-bold">Lenguajes</h3>
+         <div class="d-flex flex-wrap gap-2 justify-content-start">
+            <span class="badge align-items-center p-2 pe-2 rounded-pill badge-custom-python">
+              <img class="rounded-circle me-1" width="32" height="32" src="img/python.svg" alt="Python logo">
+              Python
+            </span>
+          
+            <span class="badge align-items-center p-2 pe-2 rounded-pill badge-custom-html">
+              <img class="rounded-circle me-1" width="32" height="32" src="img/HMTL.svg" alt="HTML5 logo">
+              HTML
+            </span>
+          
+            <span class="badge align-items-center p-2 pe-2 rounded-pill badge-custom-css">
+              <img class="rounded-circle me-1" width="32" height="32" src="img/CSS.svg" alt="logo css">
+              CSS
+            </span>
+          </div>
+        </section>
+        <section class="sub-tecno">
+            <h3>Software</h3>
+        </section>
+    </section>
+    <h1 class="oxygen-bold">- contacto</h1>
 </body>
 </html>
