feat: se añadio la seccion de sistemas operativos

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <!-- seccion de experiencia -->
     <section class="xp">
-        <h2 class="title oxygen-bold">Experiencia</h2>
+        <h2 class="title oxygen-bold">Experiencia Laboral</h2>
         <article class="izq">
             <h3 class="oxygen-regular">Ministerio de Agricultura y Ganaderia</h3>
             <p>Septiembre 2022 - Agosto 2024</p>
@@ -72,7 +72,7 @@
         </article>
     </section>
     <section class="Tec">
-        <h2 class="oxygen-bold">Tecnología</h2>
+        <h2 class="oxygen-bold">Experiencia en</h2>
         <section class="sub-tecno">
          <h3 class="oxygen-bold">Lenguajes</h3>
          <div class="d-flex flex-wrap gap-2 justify-content-start">
@@ -98,15 +98,39 @@
         </section>
         <section class="sub-tecno">
             <h3 class="oxygen-bold">Software</h3>
-            <ul class="flex-wrap gap-2 justify-content-start disp Oxygen-light">
+            <ul class="flex-wrap gap-2 justify-content-start disp Oxygen-light soft">
                 <li>
                     <img src="img/vmware.png" height="24" alt="Vmware logo">
                     VMware
                 </li>
-                <li>Elemento 2</li>
-                <li>Elemento 3</li>
+                <li>
+                    <img src="img/doker.webp" height="24" alt="Doker logo">
+                    Doker
+                </li>
+                <li>
+                    <img src="img/Git.png" height="24" alt="Vmware logo">
+                    Git
+                </li>
             </ul>
         </section>
+        <section class="sub-tecno">
+            <h3 class="oxygen-bold">Sistemas Operativos</h3>
+            <ul class="flex-wrap gap-2 justify-content-start disp Oxygen-light soft">
+                <li>
+                    <img src="img/vmware.png" height="24" alt="Vmware logo">
+                    Windows 10/11
+                </li>
+                <li>
+                    <img src="img/doker.webp" height="24" alt="Doker logo">
+                    Windows Server 2016
+                </li>
+                <li>
+                    <img src="img/Git.png" height="24" alt="Vmware logo">
+                    Ubuntu
+                </li>
+            </ul>
+        </section>
+
     </section>
     <h1 class="oxygen-bold">- contacto</h1>
 </body>
