--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
                 </a>
             </div>
             <div class="col-md-6 mb-4">
-                <a href="https://github.com/bautibustos/Bot-Telegram-Bacukp" target="_blank">
+                <a href="https://github.com/bautibustos/incremental-backup" target="_blank">
                     <article class="card tarjeta">
-                        <h3 class="oxygen-bold">Bot-Telegram-Bacukp</h3>
-                        <p>Bot realizado en python el cual dentro de las variables se le da la carpeta que se quiere hacer el backup, y luego a travez de un comando se pasa el backup a Telegram a una ID determinada.</p>
+                        <h3 class="oxygen-bold">incremental-backup</h3>
+                        <p>Script de consola hecho en Python para realizar backups incrementales de forma automatica durante la semana y un backup completo durante el fin de semana. Configuracion de ubicaciones y horarios en "config.json"</p>
                     </article>
                 </a>
             </div>
@@ -75,12 +75,15 @@
     <section class="xp">
         <h2 class="title oxygen-bold">Experiencia Laboral</h2>
         <article class="izq">
-            <h3 class="oxygen-regular">Ministerio de Agricultura y Ganaderia</h3>
-            <p class="tags">Septiembre 2022 - Agosto 2024</p>
+            <h3 class="oxygen-regular">Ministerio de Bioagroindustria</h3>
+            <h4>Soporte tecnico, Desarrollador y mantenimiento de infraestructura</h4>
+            <p class="descripcion oxygen-regular">Desarrollo de proyecto "AutoSend", automatizacion de procesos en Python, Manejo de Exel con dicho lenguaje.</p>
+            <p class="tags rounded-2">Enero 2024 - Actualidad</p>
         </article>
         <article class="izq">
-            <h3 class="oxygen-regular">Ministerio de Bioagroindustria</h3>
-            <p class="tags rounded-2">Agosto 2024 - Actualidad</p>
+            <h3 class="oxygen-regular">Ministerio de Agricultura y Ganaderia</h3>
+            <p class="descripcion">Desarrollo de sistema de invetario en Python y base de datos en MySQL, soporte tecnico.</p>
+            <p class="tags">Septiembre 2022 - Diciembre 2023</p>
         </article>
     </section>
 
@@ -117,8 +120,8 @@
                     VMware
                 </li>
                 <li>
-                    <img src="img/software/doker.webp" height="24" alt="Doker logo">
-                    Doker
+                    <img src="img/software/docker.webp" height="24" alt="Docker logo">
+                    Docker
                 </li>
                 <li>
                     <img src="img/software/Git.png" height="24" alt="Vmware logo">
@@ -126,7 +129,7 @@
                 </li>
                 <li>
                     <img src="img/software/workbench.webp" height="24" alt="Workbench logo">
-                    Workbench
+                    MySQL Workbench
                 </li>
             </ul>
         </section>
